--- a/index.html
+++ b/index.html
@@ -6,15 +6,26 @@
     <title>Dawson's Weblog</title>
 </head>
 <body>
-<section>
-    <article>
-        <h2> BLOG post</h2>
-        <p>words words words</p>
-    </article>
-    <article>
-        <h2>BLOG 2</h2>
-        <p>words words words</p>
-    </article>
-</section>
+    <header> 
+        <h1>Dawson's Weblog</h1>
+        <p>This a blog, were I do blog things and post blog stuff.</p>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html" >Blog</a></li>
+            <li><a href="about.html" >About</a></li>
+        </ul>
+    </nav>
+    <h2>Blog Posts</h2>
+    <section>
+        <article>
+            <h3>POST 1</h3>
+                <p>lorem ipsum</p>
+        </article>
+        <article>
+            <h3>POST 2</h3>
+            <p>lorem ipsum</p>
+        </article>
+    </section>
 </body>
 </html>
