--- a/about.html
+++ b/about.html
@@ -12,13 +12,20 @@
     </header>
     <nav>
         <ul>
-            <li>lorem ipsum</li>
-            <li>lorem ipsum</li>
+            <li><a href="index.html" >Blog</a></li>
+            <li><a href="about.html" >About</a></li>
         </ul>
     </nav>
+    <h2>About</h2>
     <section>
-        <article>yeet</article>
+        <article>
+            <p>Hi, I'm Dawson and this is my webpage and blog! On this page I like to post about the following things!</p>
+            <ul>
+                <li>Thing 1</li>
+                <li>Thing 2</li>
+                <li>Thing 3</li>
+            </ul>
+        </article>
     </section>
-    
 </body>
 </html>
