Blog About final

--- a/about.html
+++ b/about.html
@@ -19,12 +19,20 @@
     <h2>About</h2>
     <section>
         <article>
-            <p>Hi, I'm Dawson and this is my webpage and blog! On this page I like to post about the following things!</p>
+            <p>Hi, I'm Dawson and this is my webpage and blog!</p>
+            <p>On this page I like to post about the following things!</p>
             <ul>
-                <li>Thing 1</li>
-                <li>Thing 2</li>
-                <li>Thing 3</li>
+                <li>Sports</li>
+                <li>Music</li>
+                <li><a href="https://letterboxd.com/dawsonmass/">Movies</a></li>
+                <li>Pop Culture</li>
+                <li>Video Games</li>
             </ul>
+            <p>
+                <img scr="coleman.jpeg" alt="Keon Coleman">
+                <img scr="joji.jpg" alt="Joji">
+                <img scr="druk.jpg" alt="Another Round">
+            </p>
         </article>
     </section>
 </body>
