--- a/about.html
+++ b/about.html
@@ -29,9 +29,9 @@
                 <li>Video Games</li>
             </ul>
             <p>
-                <img scr="coleman.jpeg" alt="Keon Coleman">
-                <img scr="joji.jpg" alt="Joji">
-                <img scr="druk.jpg" alt="Another Round">
+                <img src="coleman.jpeg" alt="Keon Coleman">
+                <img src="joji.jpg" alt="Joji">
+                <img src="druk.jpg" alt="Another Round">
             </p>
         </article>
     </section>
