--- a/about.html
+++ b/about.html
@@ -9,15 +9,16 @@
     <header> 
         <h1>Dawson's Weblog</h1>
         <p>This a blog, were I do blog things and post blog stuff.</p>
+        <nav>
+            <ul>
+                <li><a href="index.html" >Blog</a></li>
+                <li><a href="about.html" >About</a></li>
+                <li><a href="contact.html" >Contact</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="index.html" >Blog</a></li>
-            <li><a href="about.html" >About</a></li>
-        </ul>
-    </nav>
-    <h2>About</h2>
-    <section>
+    <section id="about">
+        <h2>About</h2>
         <article>
             <p>Hi, I'm Dawson and this is my webpage and blog!</p>
             <p>On this page I like to post about the following things!</p>
@@ -29,9 +30,9 @@
                 <li>Video Games</li>
             </ul>
             <p>
-                <img src="coleman.jpeg" alt="Keon Coleman">
-                <img src="joji.jpg" alt="Joji">
-                <img src="druk.jpg" alt="Another Round">
+                <img src="coleman.jpeg" alt="MSU reciever Keon Coleman cathcing a touchdown pass">
+                <img src="joji.jpg" alt="Musician Joji wearing a horse costume in front of a microphone">
+                <img src="druk.jpg" alt="Another Round movie poster">
             </p>
         </article>
     </section>
