--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,6 @@
         <h1>Dawson's Weblog</h1>
         <p>This a blog, were I do blog things and post blog stuff.</p>
         <nav>
-<!DOCTYPE html>.html            <ul>
                 <li><a href="index.html" >Blog</a></li>
                 <li><a href="about.html" >About</a></li>
                 <li><a href="about.html" >About</a></li>
@@ -18,9 +17,8 @@
         </nav>
     </header>
     <section id="contact">
-        <h2>Contact</h2>
+        <h2>Contact Us</h2>
         <form action="" method="get" class="form-example">
-            <label>Sign up for our newsletter!</label>
             <div class="form">
               <label for="name">Enter your name: </label>
               <input type="text" name="name" id="name" required>
