--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
         <nav>
                 <li><a href="index.html" >Blog</a></li>
                 <li><a href="about.html" >About</a></li>
-                <li><a href="about.html" >About</a></li>
+                <li><a href="contact.html" >Contact</a></li>
             </ul>
         </nav>
     </header>
