--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <p><img src="BT.jpg" alt="Bullet Train Movie Poster"></p>
     </section>
     <section id="contact">
-        <form action="" method="get" class="form-example">
+        <form>
             <label>Sign up for our newsletter!</label>
             <div class="form">
               <label for="name">Enter your name: </label>
