--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
     </header>
     <section id="contact">
         <h2>Contact Us</h2>
-        <form action="" method="get" class="form-example">
+        <form>
             <div class="form">
               <label for="name">Enter your name: </label>
               <input type="text" name="name" id="name" required>
