--- a/contact.html
+++ b/contact.html
@@ -21,19 +21,19 @@
         <form>
             <div class="form">
               <label for="name">Enter your name: </label>
-              <input type="text" name="name" id="name" required>
+              <input>
             </div>
             <div class="form">
               <label for="email">Enter your email: </label>
-              <input type="email" name="email" id="email" required>
+              <input>
             </div>
             <div class="form">
                 <label for="reason">Reason for contact: </label>
-                <input type="reason" name="reason" id="reason" required>
+                <input>
               </div>
             <div class="form">
               <label for="open-comment">Comments/Questions: </label>
-              <input type="open-comment" name="open-comment" id="open-comment" required>
+              <input>
             </div>
             <div class="form">
               <input type="submit" value="Submit">
