--- a/index.html
+++ b/index.html
@@ -71,23 +71,23 @@
                 <p><img src="BT.jpg" alt="Bullet Train Movie Poster"></p>
     </section>
     <section id="contact">
+        <p>Subscribe to our newsletter!</p>
         <form>
-            <label>Sign up for our newsletter!</label>
             <div class="form">
               <label for="name">Enter your name: </label>
-              <input type="text" name="name" id="name" required>
+              <input>
             </div>
             <div class="form">
               <label for="email">Enter your email: </label>
-              <input type="email" name="email" id="email" required>
+              <input>
             </div>
             <div class="form">
                 <label for="reason">Reason for contact: </label>
-                <input type="reason" name="reason" id="reason" required>
+                <input>
               </div>
             <div class="form">
               <label for="open-comment">Comments/Questions: </label>
-              <input type="open-comment" name="open-comment" id="open-comment" required>
+              <input>
             </div>
             <div class="form">
               <input type="submit" value="Submit">
