--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
         <p>Subscribe to our newsletter!</p>
         <form>
             <div class="form">
-              <label for="name">Enter your name: </label>
+              <label>Enter your name: </label>
               <input>
             </div>
             <div class="form">
-              <label for="email">Enter your email: </label>
+              <label>Enter your email: </label>
               <input>
             </div>
             <div class="form">
-                <label for="reason">Reason for contact: </label>
+                <label>Reason for contact: </label>
                 <input>
               </div>
             <div class="form">
-              <label for="open-comment">Comments/Questions: </label>
+              <label>Comments/Questions: </label>
               <input>
             </div>
             <div class="form">
