--- a/index.html
+++ b/index.html
@@ -69,9 +69,11 @@
                 <p>Here is a poorly pieced together review of the movie <em>Bullet Train</em> featuring Brad Pitt. I have to say that I was a really big fan of all the Japanese covers of songs throughout the movie. Always great to see Brad Pitt playing a character created for Cliff Booth. One of the better action movies i have seen in a while, not to say that it does not deserve the credit for that, but I am shocked that I have not seen anything else recently that felt more deserving. All in all the senseless violence and weird yakuza made for a very entertaining plot and to then limit the environment of the movie to a bullet train, SIGN ME UP. <em>Bullet Train</em> really does deserve some credit, good movie in my opinion, worth the 2 hours and a wild ride. CGI was meh at the end, only part that left a bad taste in my mouth. Where it shined, it really shined, but I have to say that the opposite is true to the same accord.</p>
                 <p>Final Score would have to be 3.5/5 stars. While I enjoyed the ride on the train, I have to keep my reviews consistent with each other.</p>
                 <p><img src="BT.jpg" alt="Bullet Train Movie Poster"></p>
+        </article>
     </section>
+
     <section id="contact">
-        <p>Subscribe to our newsletter!</p>
+        <h4>Subscribe to our newsletter!</h4>
         <form>
             <div class="form">
               <label>Enter your name: </label>
