--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Dawson's Weblog</title>
 </head>
 <body>
@@ -15,6 +16,7 @@
                 <li><a href="contact.html" >Contact</a></li>
             </ul>
         </nav>
+        <p> </p>
     </header>
     <section id="contact">
         <h2>Contact Us</h2>
