--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Dawson's Weblog</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
             </ul>
         </nav>
     </header>
-    <section id="blog-post">
+    <section id="blog">
         <h2>Blog Posts</h2>
         <article class="blog-post">
             <h3>Michigan State Stuns Wisconsin in 2-OT Homecoming Game!</h3>
