CSS changes part 2

--- a/contact.html
+++ b/contact.html
@@ -8,19 +8,15 @@
 </head>
 <body>
     <header> 
-        <h1>Dawson's Weblog</h1>
-        <p>This a blog, were I do blog things and post blog stuff.</p>
-        <nav>
-            <ul>
-                <li><a href="index.html" >Blog</a></li>
-                <li><a href="about.html" >About</a></li>
-                <li><a href="contact.html" >Contact</a></li>
-            </ul>
+        <div class="header"><h1>Dawson's Weblog</h1></div>
+        <nav id="navbar">
+                <a href="index.html" >Blog</a>
+                <a href="about.html" >About</a>
+                <a href="contact.html" >Contact</a>
         </nav>
-        <p> </p>
     </header>
+    <h2>Contact Us</h2>
     <section id="contact">
-        <h2>Contact Us</h2>
         <form>
             <div class="form">
               <label>Enter your name: </label>
