--- a/about.html
+++ b/about.html
@@ -8,21 +8,21 @@
 </head>
 <body>
     <header> 
-        <h1>Dawson's Weblog</h1>
-        <p>This a blog, were I do blog things and post blog stuff.</p>
-        <nav>
-            <ul>
-                <li><a href="index.html" >Blog</a></li>
-                <li><a href="about.html" >About</a></li>
-                <li><a href="contact.html" >Contact</a></li>
-            </ul>
+        <div class="header"><h1>Dawson's Weblog</h1></div>
+        <nav id="navbar">
+                <a href="index.html" >Blog</a>
+                <a href="about.html" >About</a>
+                <a href="contact.html" >Contact</a>
         </nav>
     </header>
+    <h2>About</h2>
     <section id="about">
-        <h2>About</h2>
         <article>
             <p>Hi, I'm Dawson and this is my webpage and blog!</p>
             <p>On this page I like to post about the following things!</p>
+            <div class="float-right-smaller"><img src="druk.jpg" alt="Another Round movie poster"></div>
+            <div class="float-right"><img src="coleman.jpeg" alt="MSU reciever Keon Coleman cathcing a touchdown pass"></div>
+            <div class="float-right"><img src="joji.jpg" alt="Musician Joji wearing a horse costume in front of a microphone"></div>
             <ul>
                 <li>Sports</li>
                 <li>Music</li>
@@ -30,11 +30,6 @@
                 <li>Pop Culture</li>
                 <li>Video Games</li>
             </ul>
-            <p>
-                <img src="coleman.jpeg" alt="MSU reciever Keon Coleman cathcing a touchdown pass">
-                <img src="joji.jpg" alt="Musician Joji wearing a horse costume in front of a microphone">
-                <img src="druk.jpg" alt="Another Round movie poster">
-            </p>
         </article>
     </section>
 </body>
